--- a/src/main/java/de/creativaweb/artikel/neuerPfand.form
+++ b/src/main/java/de/creativaweb/artikel/neuerPfand.form
@@ -50,7 +50,7 @@
                   </Group>
                   <Component id="jLabel2" min="-2" pref="730" max="-2" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                      <Component id="jButton8" min="-2" pref="80" max="-2" attributes="0"/>
+                      <Component id="btn_senden" min="-2" pref="80" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -88,7 +88,7 @@
                   <Component id="jTextField2" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jButton8" min="-2" pref="40" max="-2" attributes="0"/>
+              <Component id="btn_senden" min="-2" pref="40" max="-2" attributes="0"/>
               <EmptySpace pref="433" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -247,7 +247,7 @@
         <Property name="text" type="java.lang.String" value="Preis"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton8">
+    <Component class="javax.swing.JButton" name="btn_senden">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="aa" green="aa" red="aa" type="rgb"/>
