--- a/src/main/java/de/creativaweb/artikel/startSeite.form
+++ b/src/main/java/de/creativaweb/artikel/startSeite.form
@@ -108,6 +108,9 @@
         <Property name="horizontalTextPosition" type="int" value="0"/>
         <Property name="verticalTextPosition" type="int" value="3"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_kundeMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_lieferant">
       <Properties>
