--- a/src/main/java/de/creativaweb/artikel/startSeite.form
+++ b/src/main/java/de/creativaweb/artikel/startSeite.form
@@ -177,6 +177,9 @@
         <Property name="horizontalTextPosition" type="int" value="0"/>
         <Property name="verticalTextPosition" type="int" value="3"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_bestellungenMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_wareneingang">
       <Properties>
